[package]
name = "worker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.4.2", features = ["full"] }
tokio-stream = "0.1.17"

tokio-postgres = "0.7.12"
postgres-types = "0.2.8"
deadpool-postgres = "0.14.1"

lapin = "2.5.0"

apalis = "0.6.3"
apalis-redis = { version = "0.6" }
apalis-amqp = "0.4"
# clap = { version = "4", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

anyhow = "1.0"
